--- a/blocks/hero-video/hero-video.css
+++ b/blocks/hero-video/hero-video.css
@@ -47,6 +47,15 @@
   z-index: 1;
 }
 
+.herovideo-youtube {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: none;
+}
+
 /* Responsive styles */
 @media (width >= 768px) {
   .herovideo {
