--- a/blocks/image-carousel/image-carousel.css
+++ b/blocks/image-carousel/image-carousel.css
@@ -5,7 +5,6 @@
   --arrow-size: 48px;
   --indicator-size: 8px;
   margin: var(--spacing-xl) auto;
-  max-width: var(--page-max-content);
   padding: 0 var(--spacing-s);
   position: relative;
   width: 100%;
@@ -16,11 +15,14 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: var(--spacing-l);
+  text-align: center;
+  text-shadow: 0 0 1px black;
 }
 
 .carousel-title {
-  color: var(--color-white);
-  font-family: var(--bold-font-family);
+color: var(--color-heart-red);
+
+  font-family: var(--body-font-family);
   font-size: var(--heading-font-size-xl);
   line-height: var(--heading-line-height-xl);
   margin: 0;
@@ -80,7 +82,7 @@
 }
 
 .card-content {
-  background: linear-gradient(to top, var(--color-nocturnal-blue) 80%, transparent);
+  background: linear-gradient(to top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
   bottom: 0;
   color: var(--color-white);
   left: 0;
@@ -90,15 +92,16 @@
 }
 
 .card-title {
+  color: var(--color-white);
   font-family: var(--semibold-font-family);
   font-size: var(--body-font-size-l);
   line-height: 1.4;
-  margin: 0 0 var(--spacing-s);
+  margin: 0 0 var(--spacing-xs);
 }
 
 .card-type {
   align-items: center;
-  color: var(--color-heart-red);
+  color: var(--color-gold);
   display: flex;
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-s);
